# spacy-ru

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tokenize-ru.sh  tokenize-xx.sh
examples/: POS_and_syntax.ipynb  sentences.py  tokenizer_ru.py
ru2/: accuracy.txt  meta.json  tokenizer
ru2/parser/: model
