[tool.poetry]
name = "spacy-ru"
version = "0.2.1"
description = ""
authors = ["Yuri Baburov <burchik@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
#nltk = "^3.3"
#msgpack = "^0.5.6"

pymorphy2 = ">=0.8"
DAWG = ">=0.7.3"
spacy = {version = "^2.1",extras = ["cuda91"]}
pandas = ">=0.23"
tabulate = ">=0.8"

[tool.poetry.dev-dependencies]
#pytest = "^3.0"
#ipython = "^6.5"
#cupy-cuda91 = ">=4.3"
notebook = ">=5.7"
jupyter = ">=1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"